Ajustes de responsividade

--- a/src/cabide-solidario/Views/Candidatos/Details.cshtml
+++ b/src/cabide-solidario/Views/Candidatos/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
 <h1>Detalhes da candidatura</h1>
