--- a/src/cabide-solidario/Views/Candidatos/Index.cshtml
+++ b/src/cabide-solidario/Views/Candidatos/Index.cshtml
@@ -7,45 +7,49 @@
 
 <h1>Lista de candidatos ao voluntariado</h1>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Disponibilidade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Texto_Motivacao)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Disponibilidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Texto_Motivacao)
-            </td>
-            <td>
-                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Visualizar</a> |
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="table-responsive" id="no-more-tables">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Disponibilidade)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Texto_Motivacao)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td data-title="Nome">
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td data-title="Email">
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td data-title="Disponibilidade">
+                        @Html.DisplayFor(modelItem => item.Disponibilidade)
+                    </td>
+                    <td data-title="Texto Motivação">
+                        @Html.DisplayFor(modelItem => item.Texto_Motivacao)
+                    </td>
+                    <td class="DbButton">
+                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Editar</a> 
+                        <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Visualizar</a> 
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
