--- a/src/cabide-solidario/Views/RoupasDoadas/Index.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Index.cshtml
@@ -10,54 +10,59 @@
 <p>
     <a asp-action="Create" class="btn btn-success">Cadastre um novo item</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.NomeItem)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Doador)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tamanho)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genero)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.NomeItem)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Doador)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tamanho)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genero)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CodigoProduto)
-            </td>
-            <td>
-                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Visualizar</a>
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="table-responsive" id="no-more-tables">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.NomeItem)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Doador)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Tamanho)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Cor)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Genero)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CodigoProduto)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td data-title="Nome do Item">
+                        @Html.DisplayFor(modelItem => item.NomeItem)
+                    </td>
+                    <td data-title ="Doador">
+                        @Html.DisplayFor(modelItem => item.Doador)
+                    </td>
+                    <td data-title="Tamanho">
+                        @Html.DisplayFor(modelItem => item.Tamanho)
+                    </td>
+                    <td data-title="Cor">
+                        @Html.DisplayFor(modelItem => item.Cor)
+                    </td>
+                    <td data-title="Genero">
+                        @Html.DisplayFor(modelItem => item.Genero)
+                    </td>
+                    <td data-title="Codigo">
+                        @Html.DisplayFor(modelItem => item.CodigoProduto)
+                    </td>
+                    <td class="DbButton">
+                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                        <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Visualizar</a>
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
